syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// use {app_id}.{version} as package name
package archive.honor.service.v1;

option go_package = "api";

//  grpc
service ArchiveHonor {
    // 获取稿件荣誉信息
    rpc Honor(HonorRequest) returns(HonorReply);
    // 批量获取稿件荣誉
    rpc Honors(HonorsRequest) returns(HonorsReply);
}

message HonorRequest {
    int64 aid = 1 [(gogoproto.moretags)='validate:"gt=0,required"'];
    int64 build = 2;
    string mobi_app = 3;
    string device = 4;
}

message HonorReply {
    repeated Honor honor = 1;
}

message Honor {
    // 稿件aid
    int64 aid = 1;
    // 荣誉类型 1-入站必刷 2-每周必看 3-日排行榜 4-热门 5-精选频道
    int32 type = 2;
    // 跳转链接
    string url = 3;
    // 荣誉描述
    string desc = 4;
    // native活动页地址（内部使用）
    string na_url = 5;
}

message HonorsRequest {
    repeated int64 aids = 1 [(gogoproto.moretags)='validate:"max=50,dive,gt=0"'];
    int64 build = 2;
    string mobi_app = 3;
    string device = 4;
}

message HonorsReply {
    map<int64, HonorReply> Honors = 1;
}